force-app/main/default/objects/Document__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Document_Category__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aadhar</fullName>
            </value>
            <value>
                <fullName>Advance Payment</fullName>
            </value>
            <value>
                <fullName>Authority Letter / Resolution authorising the signatory to sign the Contract</fullName>
            </value>
            <value>
                <fullName>Authority Letter (supported by Board Resolution)</fullName>
            </value>
            <value>
                <fullName>Board Resolution</fullName>
            </value>
            <value>
                <fullName>BOM</fullName>
            </value>
            <value>
                <fullName>Business Commencement Certificate</fullName>
            </value>
            <value>
                <fullName>Certificate of Commencement of Business (for public limited companies)</fullName>
            </value>
            <value>
                <fullName>Certificate of registration</fullName>
            </value>
            <value>
                <fullName>Current registered lease or licence Agreement along with Utility bill(s)</fullName>
            </value>
            <value>
                <fullName>Current Shareholding Pattern</fullName>
            </value>
            <value>
                <fullName>Declaration enlisting name anddetailsofcurrent Trustees/Chairman/President/Karta</fullName>
            </value>
            <value>
                <fullName>Declaration enlisting name and other details of current existing Partners</fullName>
            </value>
            <value>
                <fullName>Declaration on Letterhead enlisting all partners names with their inclusion date</fullName>
            </value>
            <value>
                <fullName>Design Document</fullName>
            </value>
            <value>
                <fullName>Documents described basis kind of the legal entity forming JVs/SPVs/consortium</fullName>
            </value>
            <value>
                <fullName>Domicile certificate with address issued by a municipal corporation</fullName>
            </value>
            <value>
                <fullName>Driving License</fullName>
            </value>
            <value>
                <fullName>Duly executed Partnership Deed (as amended and updated up to date)</fullName>
            </value>
            <value>
                <fullName>Electricity bill</fullName>
            </value>
            <value>
                <fullName>Financial Statement(s) filed on RoC</fullName>
            </value>
            <value>
                <fullName>GST registration certificate</fullName>
            </value>
            <value>
                <fullName>Importer Exporter Code Number certificate</fullName>
            </value>
            <value>
                <fullName>List of present Director(s)</fullName>
            </value>
            <value>
                <fullName>Master Service Level Agreement (MSA)</fullName>
            </value>
            <value>
                <fullName>MoA / AoA</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>MSME Certificate (if registered)</fullName>
            </value>
            <value>
                <fullName>MSME Declaration (if not registered)</fullName>
            </value>
            <value>
                <fullName>MTNL-BSNL phone line bill</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>