force-app/main/default/objects/Document__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Object__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Identity Proof</fullName>
            </value>
            <value>
                <fullName>Address Proof</fullName>
            </value>
            <value>
                <fullName>Additional/Optional Documents</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>SCF</fullName>
                <label>Service Change Form</label>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>