force-app/main/default/objects/Document__c/fields/Is_Account_KYC_Approved__c.field-meta.xml
<CustomField>
    <fullName>Is_Account_KYC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Account KYC Approved?</label>
    <type>Checkbox</type>
</CustomField>