force-app/main/default/objects/Document__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <formula>CASE( Object__c,
  &quot;Account&quot;,  Account__r.Name,
  &quot;Contract&quot;, Contract__r.Name,
  &quot;Quote&quot;, Quote__r.Name ,
  &quot;&quot;
)</formula>
    <label>Record Name</label>
    <type>Text</type>
</CustomField>